# serverless-lakehouse-pipeline

./: .dockerignore  .env.example  .env.local-ha  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_AUDIT.md  ARCHITECTURE_CHANGES.md  ARCHITECTURE_CORRECTED.md  ARCHITECTURE_VISUALIZATION.md  AUDIT_FINAL_REPORT.md  DELIVERABLES.md  DEPLOYMENT.md  EMR_MIGRATION_GUIDE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  Jenkinsfile  Jenkinsfile.local  LOCAL_HA_SETUP.md  OPTIMIZATION_CHECKLIST.md  PERFORMANCE_ANALYSIS.md  PHASE2_HA_DEEP_ANALYSIS.md  PHASE2_RESULTS.md  PHASE3_EXECUTION_PLAN.md  PHASE3_INVESTIGATION_FINDINGS.md  PHASE3_RESULTS.md  QUICK_SUMMARY.md  README.md  README_ARCHITECTURE.md  RESUME_FRANCAIS.md  S3_DATA_PROCESSING_SUCCESS.md  SPARK_ETL_DEPLOYMENT.md  deploy-lakehouse.sh  deploy.sh  docker-compose-lakehouse.yml  docker-compose-local-ha.yml  docker-compose-optimized-t3micro.yml  docker-compose-spark-workers.yml  docker-compose.yml  pyproject.toml  setup.cfg  (+2 more)
ci/: ship-logs-to-s3.sh  validate_dags.py
ci/jenkins/: jenkins.yaml  plugins.txt
config/: init.sql  paths.yaml
config/datasets/: client.yaml  client_contrat_silver.yaml  client_profile_analysis.yaml  contract_analysis.yaml  contrat1.yaml  contrat2.yaml  kpi_final.yaml
config/spark/: default.yaml  (+7 more)
docker/: healthcheck.py
requirements/: dev.txt  runtime.txt
scripts/: benchmark_etl.py  launch-fixed-workers.sh  run_bronze_ingest.sh  run_gold_transform.sh  run_silver_transform.sh  start_spark_standalone.sh
terraform/: backend.hcl.example
tests/: __init__.py  test_config.py  test_enterprise_lakehouse.py  test_exceptions.py  test_helpers.py  test_monitoring.py  test_schema_registry.py
(+156 files in other folders)
