[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse"
version = "1.0.0"
description = "Lakehouse data platform for insurance analytics"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "python-json-logger>=2.0",
    "tenacity>=8.0",
    "boto3>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "pyspark==3.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
