[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse"
version = "1.0.0"
description = "Serverless Lakehouse ETL Pipeline for Insurance Data"
requires-python = ">=3.8"
dependencies = [
    "pyspark==3.5.0",
    "python-json-logger==2.0.7",
    "tenacity==8.2.3",
    "boto3",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.12.0",
    "flake8==6.1.0",
    "autoflake==2.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
